Fix adding buildings and rooms33
